--- a/xv6-public/Makefile
+++ b/xv6-public/Makefile
@@ -187,6 +187,7 @@ UPROGS=\
 	_wc\
 	_zombie\
 	_my_userapp\
+	_test_scheduler\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
@@ -256,7 +257,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 EXTRA=\
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c wc.c zombie.c\
-	printf.c umalloc.c my_userapp.c\
+	printf.c umalloc.c my_userapp.c test_scheduler.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
 	.gdbinit.tmpl gdbutil\
 
