--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "x86.h": "c",
     "proc.h": "c",
     "spinlock.h": "c",
-    "param.h": "c"
+    "param.h": "c",
+    "memlayout.h": "c"
   }
 }
