--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "spinlock.h": "c",
     "param.h": "c",
     "memlayout.h": "c",
-    "user.h": "c"
+    "user.h": "c",
+    "defs.h": "c"
   }
 }
