--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
     "param.h": "c",
     "memlayout.h": "c",
     "user.h": "c",
-    "defs.h": "c"
+    "defs.h": "c",
+    "mmu.h": "c",
+    "date.h": "c"
   }
 }
