--- a/xv6-public/Makefile
+++ b/xv6-public/Makefile
@@ -188,10 +188,6 @@ UPROGS=\
 	_zombie\
 	_my_userapp\
 	_test_scheduler\
-	_pj_one_get_level\
-	_pj_one_scheduler_lock\
-	_pj_one_scheduler_unlock\
-	_pj_one_set_priority\
 
 
 fs.img: mkfs README $(UPROGS)
@@ -262,7 +258,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 EXTRA=\
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c wc.c zombie.c\
-	printf.c umalloc.c my_userapp.c test_scheduler.c pj_one_get_level.c pj_one_scheduler_lock.c pj_one_scheduler_unlock.c pj_one_set_priority.c\
+	printf.c umalloc.c my_userapp.c test_scheduler.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
 	.gdbinit.tmpl gdbutil\
 
