--- a/xv6-public/Makefile
+++ b/xv6-public/Makefile
@@ -188,8 +188,8 @@ UPROGS=\
 	_zombie\
 	_my_userapp\
 	_mlfq_test\
-	_pj_one_scheduler_lock_test\
-	_pj_one_scheduler_unlock_test\
+	_scheduler_lock_test\
+	_scheduler_unlock_test\
 
 
 fs.img: mkfs README $(UPROGS)
@@ -260,7 +260,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 EXTRA=\
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c wc.c zombie.c\
-	printf.c umalloc.c my_userapp.c mlfq_test.c pj_one_scheduler_lock_test.c pj_one_scheduler_unlock_test.c\
+	printf.c umalloc.c my_userapp.c mlfq_test.c scheduler_lock_test.c scheduler_unlock_test.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
 	.gdbinit.tmpl gdbutil\
 
