--- a/project02/.vscode/settings.json
+++ b/project02/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
   "files.associations": {
-    "x86.h": "c"
+    "x86.h": "c",
+    "types.h": "c",
+    "user.h": "c",
+    "memlayout.h": "c",
+    "list": "c"
   }
 }
