--- a/project02/.vscode/settings.json
+++ b/project02/.vscode/settings.json
@@ -5,6 +5,7 @@
     "user.h": "c",
     "memlayout.h": "c",
     "list": "c",
-    "spinlock.h": "c"
+    "spinlock.h": "c",
+    "thread": "c"
   }
 }
