--- a/project02/.vscode/settings.json
+++ b/project02/.vscode/settings.json
@@ -7,6 +7,7 @@
     "list": "c",
     "spinlock.h": "c",
     "thread": "c",
-    "random": "c"
+    "random": "c",
+    "__threading_support": "c"
   }
 }
