--- a/project02/.vscode/settings.json
+++ b/project02/.vscode/settings.json
@@ -8,6 +8,8 @@
     "spinlock.h": "c",
     "thread": "c",
     "random": "c",
-    "__threading_support": "c"
+    "__threading_support": "c",
+    "chrono": "c",
+    "variant": "c"
   }
 }
