--- a/project03/.vscode/settings.json
+++ b/project03/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "files.associations": {
-    "fs.h": "c"
+    "fs.h": "c",
+    "ios": "c",
+    "istream": "c",
+    "locale": "c",
+    "streambuf": "c",
+    "*.tcc": "c"
   }
 }
