--- a/project03/.vscode/settings.json
+++ b/project03/.vscode/settings.json
@@ -11,6 +11,21 @@
     "__config": "c",
     "chrono": "c",
     "functional": "c",
-    "fcntl.h": "c"
+    "fcntl.h": "c",
+    "__hash_table": "c",
+    "__split_buffer": "c",
+    "array": "c",
+    "bitset": "c",
+    "deque": "c",
+    "initializer_list": "c",
+    "list": "c",
+    "queue": "c",
+    "random": "c",
+    "span": "c",
+    "unordered_map": "c",
+    "vector": "c",
+    "string_view": "c",
+    "ranges": "c",
+    "utility": "c"
   }
 }
