--- a/project03/xv6-public/Makefile
+++ b/project03/xv6-public/Makefile
@@ -182,7 +182,6 @@ UPROGS=\
 	_zombie\
 	_test_file\
 	_filesizetest\
-	_pwritetest\
 	_synctest\
 
 fs.img: mkfs README $(UPROGS)
@@ -253,7 +252,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 EXTRA=\
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c wc.c zombie.c\
-	test_file.c filesizetest.c pwritetest.c synctest.c\
+	test_file.c filesizetest.c synctest.c\
 	printf.c umalloc.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
 	.gdbinit.tmpl gdbutil\
