--- a/project03/xv6-public/Makefile
+++ b/project03/xv6-public/Makefile
@@ -183,6 +183,7 @@ UPROGS=\
 	_test_file\
 	_filesizetest\
 	_synctest\
+	_symlinktest\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
@@ -252,7 +253,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 EXTRA=\
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c wc.c zombie.c\
-	test_file.c filesizetest.c synctest.c\
+	test_file.c filesizetest.c synctest.c symlinktest.c\
 	printf.c umalloc.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
 	.gdbinit.tmpl gdbutil\
