--- a/project03/.vscode/settings.json
+++ b/project03/.vscode/settings.json
@@ -33,6 +33,7 @@
     "iosfwd": "c",
     "new": "c",
     "sstream": "c",
-    "stop_token": "c"
+    "stop_token": "c",
+    "atomic": "c"
   }
 }
